# cin

./: Cargo.toml  README.md
src/: cin.rs  lib.rs  macros.rs
src/cin/: tests.rs
tests/: mod.rs
